
        * accessibility/mac/WebAccessibilityObjectWrapperBase.mm:
        (-[WebAccessibilityObjectWrapperBase accessibilityTitle]):
        (-[WebAccessibilityObjectWrapperBase accessibilityDescription]):
        * accessibility/mac/WebAccessibilityObjectWrapperMac.mm:

2013-09-11  Andreas Kling  <akling@apple.com>

        Rename BackForwardList => BackForwardClient.
        <https://webkit.org/b/121143>

        Reviewed by Antti Koivisto.

        Nuke a 3 year old FIXME about renaming this class.

2013-09-10  Daniel Bates  <dabates@apple.com>

        [iOS] Upstream text autosizing
        https://bugs.webkit.org/show_bug.cgi?id=121111

        Reviewed by Andy Estes and Sam Weinig.

        Tests: platform/iphone-simulator/text-autosizing/anonymous-block.html
               platform/iphone-simulator/text-autosizing/contenteditable.html
               platform/iphone-simulator/text-autosizing/first-letter.html
               platform/iphone-simulator/text-autosizing/font-family-case-insensitive.html
               platform/iphone-simulator/text-autosizing/lists.html
               platform/iphone-simulator/text-autosizing/overflow.html
               platform/iphone-simulator/text-autosizing/percent-adjust-length-line-height.html
               platform/iphone-simulator/text-autosizing/percent-adjust-number-line-height.html
               platform/iphone-simulator/text-autosizing/percent-adjust-percent-line-height.html

        * WebCore.exp.in:
        * WebCore.xcodeproj/project.pbxproj:
        * css/CSSComputedStyleDeclaration.cpp:
        (WebCore::ComputedStyleExtractor::propertyValue):
        * css/CSSParser.cpp:
        (WebCore::isValidKeywordPropertyAndValue):
        (WebCore::CSSParser::parseValue):
        * css/CSSProperty.cpp:
        (WebCore::CSSProperty::isInheritedProperty):
        * css/CSSPropertyNames.in: Add property -webkit-text-size-adjust.
        * css/DeprecatedStyleBuilder.cpp: