@@ -3252,9 +3252,9 @@ webcore_sources += \
 	Source/WebCore/fileapi/ThreadableBlobRegistry.h \
 	Source/WebCore/fileapi/WebKitBlobBuilder.cpp \
 	Source/WebCore/fileapi/WebKitBlobBuilder.h \
+	Source/WebCore/history/BackForwardClient.h \
 	Source/WebCore/history/BackForwardController.cpp \
 	Source/WebCore/history/BackForwardController.h \
-	Source/WebCore/history/BackForwardList.h \
 	Source/WebCore/history/BackForwardListImpl.cpp \
 	Source/WebCore/history/BackForwardListImpl.h \
 	Source/WebCore/history/CachedFrame.cpp \
